# ImmunoFit_LeoGu

./: .gitignore  README.md  app.py  mock_data.py  models.py  pyproject.toml  translations.py
immunofit/: __init__.py  api.py  exercise.py  gene_expression.py  immune_readiness.py  models.py  predictor.py
static/css/: style.css
templates/: base.html  clinician.html  index.html  login.html  patient.html
tests/: conftest.py  test_api.py  test_exercise.py  test_gene_expression.py  test_immune_readiness.py  test_models.py  test_predictor.py
